--- a/index.html
+++ b/index.html
@@ -340,19 +340,19 @@
             </div>
             <div class="container">
                 <div class="card">
-                    <img src="/images/feature-1.jpg" alt="">
+                    <img src="images/feature-1.jpg" alt="">
                     <h3>Guaranteed PURE</h3>
                     <p>All Grace formulations adhere to strict purity standards and will never contain harsh or toxic ingredients</p>
                 </div>
 
                 <div class="card">
-                    <img src="/images/feature-2.jpg" alt="">
+                    <img src="images/feature-2.jpg" alt="">
                     <h3>Completely Cruelty-Free</h3>
                     <p>All Grace formulations adhere to strict purity standards and will never contain harsh or toxic ingredients</p>
                 </div>
 
                 <div class="card">
-                    <img src="/images/feature-3.jpg" alt="">
+                    <img src="images/feature-3.jpg" alt="">
                     <h3>Ingredient Sourcing</h3>
                     <p>All Grace formulations adhere to strict purity standards and will never contain harsh or toxic ingredients</p>
                 </div>
@@ -363,7 +363,7 @@
            <div class="blog" id="blog-link">
             <div class="container">
                 <div class="card">
-                    <img src="/images/blog-1.jpg" alt="">
+                    <img src="images/blog-1.jpg" alt="">
                     <div class="content">
                         <a href="#">Find a Store</a>
                         <a href="#">Our Store <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></a>
@@ -371,7 +371,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="/images/blog-2.jpg" alt="">
+                    <img src="images/blog-2.jpg" alt="">
                     <div class="content">
                         <a href="#">From Our Blog</a>
                         <a href="#">Our Store <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></a>
@@ -379,7 +379,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="/images/blog-3.jpg" alt="">
+                    <img src="images/blog-3.jpg" alt="">
                     <div class="content">
                         <a href="#">Our Story</a>
                         <a href="#">Our Store <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg></a>
